# Athena-Wisdom-Bot

./: .gitignore  Clippings.txt  README.md  Udec.json  Udec.py  home.py  main.py  pyproject.toml  requirements.txt  run.sh  tmp.py
Goodreads/: clock.py
commands/: get.py  source.py
components/: adder.py  college.py  fetch.py  formatting.py  goodread.py  history.py
data/: Udec.json  clippings.txt  records.json
db/: api.py  clips.db  config.txt  init.py
jobs/: init.py  quote.py
mongo/: API.ipynb  API.py  Transition.ipynb  history.json  transition.ipynb
