[tool.poetry]
name = "diana-wisdom-bot"
version = "2.0"
description = "Daily dopamine shots via inspirational quotes"
authors = ["CxrlosKenobi <kenobi@ieee.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.0a0"
pymongo = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
